infra/k8s/fest-compass/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fest-compass
  labels:
    app.kubernetes.io/name: fest-compass
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: fest-compass
spec:
  selector:
    app.kubernetes.io/name: fest-compass
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
